[package]
name = "leptos_transition_flip"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Enables transition between element positions with FLIP"
homepage = "https://gabrielbarbosagv.github.io/leptos-transition-flip"
repository = "https://github.com/GabrielBarbosaGV/leptos-transition-flip"
readme = "README.md"
keywords = ["leptos", "css", "animation", "transition", "FLIP"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.4.10"
web-sys = { version = "0.3.64", features = ["Element", "DomRect"] }
